--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -4,5 +4,5 @@
   <h3>{{ product.name }}</h3>
   <h4>{{ product.price | currency }}</h4>
   <p>{{ product.description }}</p>
-  <button type="button" (click) = "addToCart(product)">B</button>
+  <button type="button" (click) = "addToCart(product)">Buy</button>
 </div>
